force-app/main/default/objects/Question_Visibility_Rule__c/Question_Visibility_Rule__c.object-meta.xml
<CustomObject>
    <label>Question Visibility Rule</label>
    <nameField>
        <label>Question Visibility Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Visibility Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>