force-app/main/default/objects/Question_Visibility_Rule__c/fields/Next_Question__c.field-meta.xml
<CustomField>
    <fullName>Next_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Question Visibility Rules (Next Question)</relationshipLabel>
    <relationshipName>Question_Visibility_Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>