force-app/main/default/objects/Question_Visibility_Rule__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Question Visibility Rules</relationshipLabel>
    <relationshipName>Question_Visibility_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>