force-app/main/default/objects/Question_Visibility_Rule__c/fields/Visibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Criteria__c</fullName>
    <label>Visibility Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>